CORRECTION BUG DEPOT

--- a/src/header.html
+++ b/src/header.html
@@ -17,10 +17,14 @@
 
 <body>
     <header class="fixed top-0 left-0 w-full z-50 bg-gray-800 flex justify-between items-center p-4 rounded-b-3xl h-20">
+        <!-- si le justify-between ne fonctionne pas, ajouter : style="display: flex; justify-content: space-between;"-->
+
+        <!-- ||||||||||| --> 
+        <!-- BURGER MENU -->
         <div class="relative">
             <!-- Burger Button -->
             <button id="burger-btn"
-                class="md:hidden z-20 flex flex-col items-center justify-center space-y-1 w-10 h-10 bg-gray-200 rounded-lg focus:outline-none hover:bg-gray-300">
+                class="lg:hidden z-20 flex flex-col items-center justify-center space-y-1 w-10 h-10 bg-gray-200 rounded-lg focus:outline-none hover:bg-gray-300">
                 <span class="w-8 h-1 bg-gray-800 rounded"></span>
                 <span class="w-8 h-1 bg-gray-800 rounded"></span>
                 <span class="w-8 h-1 bg-gray-800 rounded"></span>
@@ -28,23 +32,25 @@
 
             <!-- Dropdown Menu -->
             <div id="menu"
-                class="transition duration-150 hidden absolute z-10 top-10 left-[-16px] font-bold bg-gray-800 shadow-lg rounded-b-3xl w-[100vw] p-4 pt-10 md:hidden">
+                class="transition duration-150 hidden absolute z-10 top-10 left-[-16px] font-bold bg-gray-800 shadow-lg rounded-b-3xl w-[100vw] p-4 pt-10 lg:hidden">
                 <div class="liens">
                     <a href="./index.html" class="flex items-center px-4 text-white hover:bg-gray-100">
-                        <img src="https://cdn-icons-png.flaticon.com/512/1828/1828490.png" alt="Home"
+                        <img src="./css/img/003-home.png" alt="Home"
                             class="w-5 h-5 mr-3">
                         ACCUEIL
                     </a>
                     <a href="./lesMasters.html" class="flex items-center px-4 text-white hover:bg-gray-100">
-                        <img src="https://cdn-icons-png.flaticon.com/512/2983/2983813.png" alt="About"
+                        <img src="./css/img/002-mortarboard.png" alt="Masters"
                             class="w-5 h-5 mr-3">
                         MASTERS
                     </a>
                     <a href="./lesEtablissements.html" class="flex items-center px-4 text-white hover:bg-gray-100">
-                        <img src="https://cdn-icons-png.flaticon.com/512/2983/2983813.png" alt="About"
+                        <img src="./css/img/001-old-building.png" alt="Establishments"
                             class="w-5 h-5 mr-3">
-                        ÉTABLISSEMENTs
+                        ÉTABLISSEMENTS
                     </a>
+
+                    <!-- Barre de séparation -->
                     <div class="h-px bg-gray-400 my-2 mx-12"></div>
 
                     <div class="">
@@ -56,17 +62,18 @@
                         </a>
                     </div>
                 </div>
-                <div class="h-px bg-gray-400 my-2 mx-12"></div>
-                <div id="search-container"></div>
             </div>
         </div>
 
-        <div class="md:hidden flex items-center space-x-4 z-20">
+        <!-- FAVORIS ET PROFIL -->
+        <div class="lg:hidden flex items-center space-x-4 z-20">
+            <!-- Bouton Favoris -->
             <button id="favoris-btn"
                 class="flex items-center justify-center w-10 h-10 bg-gray-200 rounded-lg focus:outline-none hover:bg-gray-300">
                 <a href="./favoris.html"><img src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png"
                         alt="Favoris" class="w-6 h-6"></a>
             </button>
+            <!-- Bouton Profil -->
             <button id="profil-btn"
                 class="flex items-center justify-center w-10 h-10 bg-gray-200 rounded-lg focus:outline-none hover:bg-gray-300">
                 <a href="./profil.html"><img src="https://cdn-icons-png.flaticon.com/512/1077/1077063.png" alt="Profil"
@@ -74,56 +81,62 @@
             </button>
         </div>
 
-        <div class="hidden md:flex">
+        <!-- ||||||||||| -->
+        <!-- NORMAL MENU -->
+        <div class="hidden lg:flex">
+            <!-- LOGO -->
             <img class="" src="" alt="">
 
             <!-- RECHERCHE -->
-            <div class="flex justify-center items-center mr-2">
+            <!-- Barre de recherche -->
+            <div id="button-recherche" class="flex justify-center items-center mr-2">
                 <div class="relative w-full max-w-lg">
                     <input id="header-search-input" type="text" placeholder="Rechercher"
                         class="w-full px-4 py-3 border border-gray-300 rounded-full bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-400" />
+                    <!-- Icône de recherche -->
                     <button id="header-search-button" class="absolute top-1/2 transform -translate-y-1/2 right-4">
-                        <img src="https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Search Icon" class="w-5 h-5" />
+                        <img src="https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Search Icon"
+                            class="w-5 h-5">
                     </button>
                 </div>
             </div>
 
+            <!-- NAVBARRE -->
             <nav class="flex justify-around rounded-full bg-white shadow-md p-2">
                 <a href="./index.html"
-                    class="text-black px-4 py-2 rounded-full font-medium transition-all duration-200 active:bg-gray-200">
+                    class="text-black px-4 py-2 rounded-full font-medium transition-all duration-200 active:bg-gray-200"
+                    id="home-tab">
                     ACCUEIL
                 </a>
                 <a href="./lesEtablissements.html"
-                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black">
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="establishments-tab">
                     ÉTABLISSEMENTS
                 </a>
                 <a href="./lesMasters.html"
-                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black">
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="masters-tab">
                     MASTERS
                 </a>
                 <a href="./favoris.html"
-                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black">
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="favorites-tab">
                     FAVORIS
                 </a>
+                <a href="./benchmark.html"
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="favorites-tab">
+                    BENCHMARK
+                </a>
                 <a href="./profil.html"
-                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black">
+                    class="text-gray-500 px-4 py-2 rounded-full font-medium transition-all duration-200 hover:text-black"
+                    id="profile-tab">
                     PROFIL
                 </a>
             </nav>
         </div>
     </header>
 
-    <script src="./js/search.js"></script>
-    <script>
-        fetch('rechercheETfiltres.html')
-            .then(response => response.text())
-            .then(data => {
-                const container = document.getElementById('search-container');
-                container.innerHTML = data;
-                initBurgerMenu();
-            })
-            .catch(error => console.error('Error loading content:', error));
-    </script>
 </body>
 
 </html>
