--- a/src/lesMasters.html
+++ b/src/lesMasters.html
@@ -114,9 +114,6 @@
         // DANS CE CAS, IL NOUS FAUT EXCLURE LES MASTER NON-NECESSAIRES / UNIQUEMENT CEUX DEMANDÉS :
 
 
-
-
-
       } else {
         console.log("Il n'y a rien après lesMasters.html.");
       }
@@ -124,19 +121,33 @@
       let currentIndex = 0; // Index actuel pour le chargement des masters
 
       const createMasterCard = (master) => {
-        const masterCard = document.createElement('a');
-        masterCard.href = `master.html?id=${master.ifc}`;
+        const masterCard = document.createElement("div");
+        masterCard.className = "p-4 bg-white border rounded-md shadow-sm";
+        masterCard.setAttribute("data-master-id", master.ifc); // ID du master
+        masterCard.setAttribute("data-master-name", master.parcours || "Nom non disponible"); // Nom du master
+        masterCard.setAttribute("data-master-description", master.lieux || "Lieu non spécifié"); // Description du master
+
         masterCard.innerHTML = `
-      <div class="p-4 bg-white border rounded-md shadow-sm">
-        <h2 class="font-bold text-lg mb-2 lg:text-2xl">${master.parcours || 'Nom non disponible'}</h2>
-        <p class="text-sm text-gray-500 lg:text-lg">
-          Alternance : ${master.alternance ? 'Oui' : 'Non'}
-        </p>
-        <p class="text-xs text-gray-400 lg:text-sm mt-2">Lieu(x) : ${master.lieux || 'Non spécifié'}</p>
-      </div>
-    `;
+          <h2 class="font-bold text-lg mb-2 lg:text-2xl">${master.parcours || "Nom non disponible"}</h2>
+          <p class="text-sm text-gray-500 lg:text-lg">Alternance : ${master.alternance ? "Oui" : "Non"}</p>
+          <p class="text-xs text-gray-400 lg:text-sm mt-2">Lieu(x) : ${master.lieux || "Non spécifié"}</p>
+          <button class="mt-4 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 master-link" data-id="${master.ifc}">
+            Voir plus
+          </button>
+        `;
+
+        // Ajouter un gestionnaire d'événement au bouton "Voir plus"
+        const viewMoreButton = masterCard.querySelector(".master-link");
+        viewMoreButton.addEventListener("click", () => {
+          redirectToMaster(master.ifc);
+        });
+
         return masterCard;
       };
+
+      function redirectToMaster(masterId) {
+        window.location.href = `master.html?id=${masterId}`;
+      }
 
       const loadMasters = (count) => {
         const nextMasters = allMasters.slice(currentIndex, currentIndex + count);
