Modification des titres des pages et mise à jour des chemins d'images dans le footer

--- a/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/etablissement.html
+++ b/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/etablissement.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vos Favoris</title>
+    <title>etablissements</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/bgMenu.js"></script>
 
@@ -16,9 +16,6 @@
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/filtresRecherche.js"></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
-
 </head>
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
@@ -44,7 +41,7 @@
         <div>
             <h2 class="font-bold text-3xl mb-4">Masters disponibles</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 loader-container" id="masters-container">
-                <!-- Les masters seront insérés ici -->
+                <!-- Les masters insérés ici -->
             </div>
 
             <div class="text-center mt-4">
