--- a/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/footer.html
+++ b/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/footer.html
@@ -24,19 +24,19 @@
         <div class="flex flex-wrap justify-center gap-4">
             <a href="https://www.facebook.com" class="group flex bg-white rounded-full h-12 w-12 justify-center items-center overflow-hidden hover:scale-110 transition-transform relative">
                 <span class="absolute inset-0 bg-blue-500 opacity-0 group-hover:opacity-25 transition-opacity"></span>
-                <img src="/img/facebook.png" alt="Facebook" class="h-6 w-6 z-10">
+                <img src="/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/img/facebook.png" alt="Facebook" class="h-6 w-6 z-10">
             </a>
             <a href="https://www.instagram.com" class="group flex bg-white rounded-full h-12 w-12 justify-center items-center overflow-hidden hover:scale-110 transition-transform relative">
                 <span class="absolute inset-0 bg-pink-500 opacity-0 group-hover:opacity-25 transition-opacity"></span>
-                <img src="/img/instagram.png" alt="Instagram" class="h-6 w-6 z-10">
+                <img src="/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/img/instagram.png" alt="Instagram" class="h-6 w-6 z-10">
             </a>
             <a href="https://www.linkedin.com" class="group flex bg-white rounded-full h-12 w-12 justify-center items-center overflow-hidden hover:scale-110 transition-transform relative">
                 <span class="absolute inset-0 bg-blue-700 opacity-0 group-hover:opacity-25 transition-opacity"></span>
-                <img src="/img/linkedin.png" alt="LinkedIn" class="h-6 w-6 z-10">
+                <img src="/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/img/linkedin.png" alt="LinkedIn" class="h-6 w-6 z-10">
             </a>
             <a href="https://www.youtube.com" class="group flex bg-white rounded-full h-12 w-12 justify-center items-center overflow-hidden hover:scale-110 transition-transform relative">
                 <span class="absolute inset-0 bg-red-500 opacity-0 group-hover:opacity-25 transition-opacity"></span>
-                <img src="/img/youtube.png" alt="YouTube" class="h-6 w-6 z-10">
+                <img src="/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/img/youtube.png" alt="YouTube" class="h-6 w-6 z-10">
             </a>
         </div>
     </div>
